# fluidXtra

./: .gitignore  ToDofluidXtra.txt
fluidXtra_src_6.3/: AUTHORS.txt  README.txt  TODO.txt  VERSIONS.txt
fluidXtra_src_6.3/BUGS/: solo4.dir
fluidXtra_src_6.3/BUGS/DP3/: 2-bounce.dir  3-soli.dir  4-invaders.dir  shared.cst
fluidXtra_src_6.3/BUGS/Devox/: DEVOX.dir  description.txt  logg.txt
fluidXtra_src_6.3/demo/: Eclair16.44.st.aif  fluid6.4Demo.dir  fluidDownloadDemo.dir  fluidDownloadDemo_d11.dir  fluidSeqDemo.dir  fluidSeqDemo_d11.dir  fluidSettingsDemo.dir  fluidSimpleDemo.dir  fluidSimpleDemo_d11.dcr  fluidSimpleDemo_d11.dir  fluidSimpleDemo_d11.html  fluidXtraDemo.dir  fluidXtraDemo_d11.dir  logfile.txt
fluidXtra_src_6.3/documentation/: fluidXtra.txt  fluidXtraFAQ.txt
fluidXtra_src_6.3/macbuildU2/fluidXtra.xcodeproj/: antoine.mode1  antoine.mode1v3  antoine.pbxuser  project.pbxproj
fluidXtra_src_6.3/macbuildU2/fluidXtra.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
fluidXtra_src_6.3/src/: bytesfifo.cpp  bytesfifo.h  dversion.h  fluidimportfile.cpp  fluidimportfile.h  fluidnotif.cpp  fluidnotif.h  fluidreg.cpp  fluidreg.h  fluidxtra.cpp  fluidxtra.def  fluidxtra.h  supportFolder.cpp  supportFolder.h  xtra.cpp
fluidXtra_src_6.3/src/win32/: dversion.rc
fluidXtra_src_6.3/winbuild/: UpgradeLog.XML  UpgradeLog.htm  fluidXtra.plg  fluidXtra.vcproj  fluidXtra.vcxproj  fluidXtra.vcxproj.filters  fluidxtra.opt  fluidxtra.sln  resource.h
fluidsynth-1.1.5/: CMakeLists.txt
fluidsynth-1.1.5/build_mac/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  cmake_uninstall.cmake  config.h  fluidsynth.pc
fluidsynth-1.1.5/build_mac/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  package_postBuildPhase.makeMinSizeRel  tarball-autotools_cmakeRulesBuildPhase.makeRelWithDebInfo  tarball_cmakeRulesBuildPhase.makeRelWithDebInfo  uninstall_cmakeRulesBuildPhase.makeRelWithDebInfo
fluidsynth-1.1.5/build_mac/FluidSynth.xcodeproj/: project.pbxproj
fluidsynth-1.1.5/build_mac/doc/: cmake_install.cmake
fluidsynth-1.1.5/build_mac/include/: cmake_install.cmake
fluidsynth-1.1.5/build_mac/include/fluidsynth/: cmake_install.cmake
fluidsynth-1.1.5/build_mac/src/: cmake_install.cmake
fluidsynth-1.1.5/build_mac/src/CMakeScripts/: fluidsynth_postBuildPhase.makeRelWithDebInfo  libfluidsynth_postBuildPhase.makeRelease
fluidsynth-1.1.5/build_macOLD/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  cmake_uninstall.cmake
fluidsynth-1.1.5/build_macOLD/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  install_postBuildPhase.makeDebug  package_postBuildPhase.makeMinSizeRel  tarball-autotools_cmakeRulesBuildPhase.makeRelWithDebInfo  tarball_cmakeRulesBuildPhase.makeDebug  uninstall_cmakeRulesBuildPhase.makeRelWithDebInfo
fluidsynth-1.1.5/build_macOLD/FluidSynth.xcodeproj/: antoine.mode1v3  antoine.pbxuser  project.pbxproj
fluidsynth-1.1.5/build_macOLD/FluidSynth.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
fluidsynth-1.1.5/build_macOLD/doc/: cmake_install.cmake
fluidsynth-1.1.5/build_macOLD/include/: cmake_install.cmake
fluidsynth-1.1.5/build_macOLD/include/fluidsynth/: cmake_install.cmake
fluidsynth-1.1.5/build_macOLD/src/: cmake_install.cmake
fluidsynth-1.1.5/build_macOLD/src/CMakeScripts/: fluidsynth_postBuildPhase.makeDebug  libfluidsynth_postBuildPhase.makeDebug
fluidsynth-1.1.5/build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  FluidSynth.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config.h  config_win32.h
fluidsynth-1.1.5/build_win/doc/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
fluidsynth-1.1.5/build_win/include/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
fluidsynth-1.1.5/build_win/include/fluidsynth/: INSTALL.vcxproj  INSTALL.vcxproj.filters  (+3 more)
fluidsynth-1.1.5/build_win/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  fluidsynth.vcxproj  fluidsynth.vcxproj.filters  libfluidsynth.vcxproj  libfluidsynth.vcxproj.filters
fluidsynth-1.1.5/include/fluidsynth/: audio.h
fluidsynth-1.1.5/src/: CMakeLists.txt  config_win32.cmake  fluid_dll.c
fluidsynth-1.1.5/src/drivers/: fluid_adriver.c  fluid_coreaudio.c  fluid_dsound.c  fluid_portaudio.c
fluidsynth-1.1.5/src/sfloader/: fluid_ramsfont.c
libsndfile/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  acconfig.h  configure  configure.in
libsndfile/MacOS/: Makefile.in  config.h
libsndfile/Win32/: MakeAll.dsp  MakeAll.mak  Makefile.am  Makefile.in  config.h  error_test.dsp  libsndfile.dsp  libsndfile.dsw  libsndfile.opt  libsndfile1.dsp  libsndfile1.plg  lossy_comp_test.dsp  make_sine.dsp  read_seek_test.dsp  readme-win32.txt  sfconvert.dsp  sfinfo.dsp  sndfile2oct.dsp  wav32_aiff24.dsp  write_read_test.dsp
libsndfile/doc/: ChangeLog  Makefile.am  Makefile.in  api.html  index.html
libsndfile/examples/: Makefile.in  make_sine.c  sfconvert.c  sfhexdump.c  sfinfo.c  sndfile2oct.c  wav32_aiff24.c
libsndfile/libsndfileproj/: libsndfileproj
libsndfile/src/: Makefile.am  Makefile.in  aiff.c  alaw.c  alaw.h  au.c  common.c  common.h  config.h.OLD  config.h.in  pcm.c  raw.c  sfendian.h  sndfile.c  sndfile.h  ulaw.c  ulaw.h  wav.c  wav.h  wav_float.c  wav_ima_adpcm.c  wav_ms_adpcm.c
libsndfile/tests/: Makefile.am  Makefile.in  alaw_test.c  error_test.c  lossy_comp_test.c  read_seek_test.c  ulaw_test.c  write_read_test.c
products/: fluidXtra.x32  postbuildxtramac.command
products/fluidXtra.xtra/Contents/: Info.plist
products/xplatform/: fluidXtra.cpio  readme.txt
(+118 files in other folders)
