# Configure `sndfile'.
# Copyright 1998, 1999 Erik de Castro Lopo (erikd@zip.com.au).

dnl Require autoconf version >= 2.12

AC_PREREQ(2.12)			
AC_INIT(src/sndfile.c)
AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE(libsndfile,0.0.16)

dnl This is the version info according to the libtool versioning system.
dnl It does *not* correspond to the release number.

SHARED_VERSION_INFO="0:4:0"

dnl Process this file with autoconf to produce a configure script.

AM_CONFIG_HEADER(src/config.h)

AC_PROG_CC
AC_PROG_INSTALL

AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LN_S
AM_PROG_LIBTOOL

AC_HEADER_STDC
AC_CHECK_FUNCS(fopen fread fwrite fclose fseek ftell malloc free)

AC_TYPE_SIZE_T
AC_TYPE_OFF_T

AC_CHECK_SIZEOF(short,2)
AC_CHECK_SIZEOF(int,4)
AC_CHECK_SIZEOF(float,4)
AC_CHECK_SIZEOF(double,4)
AC_CHECK_SIZEOF(void*,8)

AC_ARG_ENABLE(justsrc, [  --enable-justsrc        only compile library sources ],
	ac_arg_justsrc="$withval", ac_arg_justsrc="N")

dnl sf_ushort_typedef="typedef unsigned short sf_ushort ;"
dnl sf_uint_typedef="typedef unsigned int sf_uint ;"

if test $ac_cv_prog_gcc = yes; then
	CFLAGS="-g -O6 -Wall -pedantic -Wstrict-prototypes -Wconversion -pipe"
	dnl CFLAGS="-g -O0 -Wall -pedantic -Wstrict-prototypes -Wconversion -pipe"
	dnl AC_MSG_WARN([**** Optimisation has been switched off. ****])
	fi

if test $cross_compiling = yes ; then
	AC_MSG_WARN([******************************************************************])
	AC_MSG_WARN([*** We are cross-compiling, so have to assume sizeof (short) == 2 ])
	AC_MSG_WARN([*** and sizeof (int) == 4. If this is not the case there is no    ])
	AC_MSG_WARN([*** chance of this working. Please contact the mantainer.         ])
	AC_MSG_WARN([*** If the sizeof issues are not a problem you may need to        ])
	AC_MSG_WARN([*** undefine CAN_READ_WRITE_x86_IEEE in src/config.h.             ])
	AC_MSG_WARN([******************************************************************])
	fi
	
if test $ac_cv_sizeof_int != 4 ; then
	AC_MSG_WARN([******************************************************************])
	AC_MSG_WARN([*** sizeof (int) != 4                                             ])
	AC_MSG_WARN([******************************************************************])
	fi

if test $ac_cv_sizeof_short != 2 ; then
	AC_MSG_WARN([******************************************************************])
	AC_MSG_WARN([*** sizeof (short) != 2.                                          ])
	AC_MSG_WARN([******************************************************************])
	fi
	
if test $ac_cv_sizeof_float != 4 ; then
	AC_MSG_WARN([******************************************************************])
	AC_MSG_WARN([*** sizeof (float) != 4.                                          ])
	AC_MSG_WARN([******************************************************************])
	fi
	
if test $ac_cv_sizeof_double != 8 ; then
	AC_MSG_WARN([******************************************************************])
	AC_MSG_WARN([*** sizeof (double) != 8.                                         ])
	AC_MSG_WARN([******************************************************************])
	fi
	
case "$target_cpu" in
	alpha* | i?86 )
		AC_DEFINE(__LITTLE_ENDIAN__,1)
		AC_DEFINE(__BIG_ENDIAN__,0)
		;;
		
	hppa* | m68* | mips* | powerpc* | hppa* | sparc*)
		AC_DEFINE(__LITTLE_ENDIAN__,0)
		AC_DEFINE(__BIG_ENDIAN__,1)
		;;

	*)
		AC_MSG_WARN([*****************************************************************])
		AC_MSG_WARN([*** Not able to determine endian-ness of processor.              ])
		AC_MSG_WARN([*** You will need to edit src/config.h before compiling.         ])
		AC_MSG_WARN([*****************************************************************])
		;;
esac

case "$target_cpu" in
	i?86 )
		AC_DEFINE(CAN_READ_WRITE_x86_IEEE,1)
		;;
		
	alpha* | hppa* | m68* | mips* | powerpc* | hppa* | sparc*)
		AC_DEFINE(CAN_READ_WRITE_x86_IEEE,0)
		;;

	*)
		AC_MSG_WARN([*****************************************************************])
		AC_MSG_WARN([*** Not able to determine endian-ness of processor.              ])
		AC_MSG_WARN([*** You will need to edit src/config.h before compiling.         ])
		AC_MSG_WARN([*****************************************************************])
		;;
esac

case $ac_arg_justsrc in
		1*|n*|N*)
			subdirs="src examples doc tests"
			;;
		*)
			subdirs="src"
			;;
esac

AC_SUBST(subdirs)
AC_SUBST(sf_uint_typedef)
AC_SUBST(sf_ushort_typedef)
AC_SUBST(SHARED_VERSION_INFO)

AC_OUTPUT(Makefile src/Makefile examples/Makefile tests/Makefile \
			doc/Makefile Win32/Makefile MacOS/Makefile)

